<resources>
  <string name="app_name">MyFilmRating</string>
  <string name="title_activity_3">Activity3</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="title_activity_my_rates">MyRates</string>
  <string name="rottentomatoes">RottenTomatoes</string>
  <string name="movie_name">Movie Name</string>
  <string name="send">SEND</string>
  <string name="title_activity_AddFilm">Add Film</string>
  <string name="title_activity_Profile">My Profile</string>
  <string name="newsletter">NewsLetter</string>
  <string name="username">Username</string>
  <string name="email">Email</string>
  <string name="cognom">Cognom</string>
  <string name="biografia">Biografia</string>
  <string name="nom">Nom</string>
  <string name="spinGenere">SpinnerGenere</string>
  <string name="director_name">Director Name</string>
  <string name="add_film">Add film</string>
  <string name="year">Year</string>

  <string-array name="spinnerGenero">
    <item>Masculí</item>
    <item>Femení</item>
    <item>Altres</item>
  </string-array>
</resources>