<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.Profile">

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_marginTop="50dp"
    android:background="@drawable/lotr2"
    app:layout_constraintBottom_toTopOf="@id/txtUserName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_editor_absoluteY="16dp" />

  <EditText
    android:id="@+id/txtUserName"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:hint="@string/username"
    app:layout_constraintBottom_toTopOf="@id/txtEmail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <EditText
    android:id="@+id/txtEmail"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:hint="@string/email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

  <EditText
    android:id="@+id/txtName"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:hint="@string/nom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

  <EditText
    android:id="@+id/txtCognom"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/cognom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtName" />

  <EditText
    android:id="@+id/txtBio"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:hint="@string/biografia"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtCognom" />

  <Spinner
    android:id="@+id/sniper"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txtBio" />

  <CheckBox
    android:id="@+id/checkNews"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/newsletter"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/sniper"
    app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>